# rnote-version-converter

./: Cargo.toml  README.md
src/: main.rs  rnotev0_4.rs  rnotev0_5.rs  slot.rs
src/rnotev0_4/: curves.rs  geometry.rs  roughoptions.rs  shapes.rs  strokes.rs  strokesstate.rs  transform.rs
src/rnotev0_4/strokes/: bitmapimage.rs  brush.rs  brushstroke.rs  element.rs  inputdata.rs  shapestroke.rs  vectorimage.rs
src/rnotev0_5/: penpath.rs  shapes.rs  store.rs  stroke.rs  transform.rs
src/rnotev0_5/penpath/: element.rs  segment.rs
src/rnotev0_5/shapes/: cubbez.rs  ellipse.rs  line.rs  quadbez.rs  rectangle.rs  shape.rs
src/rnotev0_5/stroke/: bitmapimage.rs  brushstroke.rs  shapestroke.rs  style.rs  vectorimage.rs
src/rnotev0_5/stroke/style/: roughoptions.rs  smoothoptions.rs  textureddotsdistribution.rs  texturedoptions.rs
