[package]
name = "rnote-version-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1", features = ["derive"] }
nalgebra = { version = "0.30.1", features = ["serde-serialize"] }
parry2d-f64 = { version = "0.8.0", features = ["serde-serialize"] }
base64 = "0.13.0"
image = "0.23"